refactor: improve backend security, controller consistency, and mapper generation with MapStruct