@@ -1,47 +1,24 @@
 package com.sankalp.exchangeservice.mapper;
 
+import java.util.Collections;
+import java.util.List;
+
+import org.mapstruct.Mapper;
+
 import com.sankalp.exchangeservice.dto.AddressDto;
 import com.sankalp.exchangeservice.entity.Address;
-import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.stream.Collectors;
+@Mapper(componentModel = "spring")
+public interface AddressMapper {
 
-@Component
-public class AddressMapper {
-    
-    public AddressDto toDto(Address address) {
-        if (address == null) {
-            return null;
-        }
-        AddressDto dto = new AddressDto();
-        dto.setId(address.getId());
-        dto.setStreet(address.getStreet());
-        dto.setCity(address.getCity());
-        dto.setCountry(address.getCountry());
-        dto.setZipCode(address.getZipCode());
-        return dto;
-    }
+	AddressDto toDto(Address address);
 
-    public Address toEntity(AddressDto dto) {
-        if (dto == null) {
-            return null;
-        }
-        Address address = new Address();
-        address.setId(dto.getId());
-        address.setStreet(dto.getStreet());
-        address.setCity(dto.getCity());
-        address.setCountry(dto.getCountry());
-        address.setZipCode(dto.getZipCode());
-        return address;
-    }
+	Address toEntity(AddressDto dto);
 
-    public List<AddressDto> toDtoList(List<Address> addresses) {
-        if (addresses == null) {
-            return null;
-        }
-        return addresses.stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
-    }
+	default List<AddressDto> toDtoList(List<Address> addresses) {
+		if (addresses == null) {
+			return Collections.emptyList();
+		}
+		return addresses.stream().map(this::toDto).toList();
+	}
 }
